--- a/app/src/main/res/layout/bottomsheet_layout_2.xml
+++ b/app/src/main/res/layout/bottomsheet_layout_2.xml
@@ -67,17 +67,16 @@
 
         </LinearLayout>
 
-        <!-- Edit Note -->
+        <!-- Add Picture -->
         <LinearLayout
-            android:id="@+id/edit_note"
+            android:id="@+id/add_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingVertical="16dp"
             android:gravity="center_vertical"
             android:clickable="true"
-            android:focusable="true"
-            android:background="?android:attr/selectableItemBackground">
+            android:focusable="true">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -90,14 +89,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Edit note"
+                android:text="Add picture"
                 android:textSize="16sp"
                 android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit"
+                android:text="Add"
                 android:textSize="14sp"
                 android:textColor="@color/dark_grey" />
 
@@ -109,9 +108,9 @@
 
         </LinearLayout>
 
-        <!-- Mark as Finished -->
+        <!-- Add note -->
         <LinearLayout
-            android:id="@+id/mark_finished"
+            android:id="@+id/buttonSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -131,27 +130,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mark as Finished"
+                android:text="Save"
+                android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="@color/black" />
 
         </LinearLayout>
-
-        <!-- Divider -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"
-            android:layout_marginVertical="8dp" />
-
-        <!-- Delete Note -->
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/delete_note"
-            android:paddingStart="24dp"
-            android:layout_marginEnd="16dp" />
 
 
     </LinearLayout>
