--- a/app/src/main/res/layout/bottomsheet_layout_2.xml
+++ b/app/src/main/res/layout/bottomsheet_layout_2.xml
@@ -69,7 +69,7 @@
 
         <!-- Add Picture -->
         <LinearLayout
-            android:id="@+id/add_picture"
+            android:id="@+id/add_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -89,7 +89,48 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Add picture"
+                android:text="Add image"
+                android:textSize="16sp"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:textSize="14sp"
+                android:textColor="@color/dark_grey" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_arrow_right"
+                android:layout_marginStart="8dp" />
+
+        </LinearLayout>
+
+        <!-- Remove Picture -->
+        <LinearLayout
+            android:id="@+id/remove_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="16dp"
+            android:gravity="center_vertical"
+            android:clickable="true"
+            android:focusable="true">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/delete"
+                android:paddingStart="24dp"
+                android:layout_marginEnd="16dp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Remove image"
                 android:textSize="16sp"
                 android:textColor="@color/black" />
 
