--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -38,8 +38,8 @@
                 android:id="@+id/editTextNoteTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="Note title"
@@ -53,25 +53,42 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:background="@drawable/custom_edit4"
+                android:id="@+id/imageViewNote"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:maxHeight="260dp"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />
+
+
             <!-- Content EditText -->
             <EditText
                 android:id="@+id/editTextNoteDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="Start typing your note..."
                 android:inputType="textMultiLine"
                 android:lineSpacingExtra="4dp"
                 android:minLines="10"
-                android:padding="8dp"
                 android:textSize="16sp"
+                android:padding="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/imageViewNote" />
 
             <!-- Reminder Text -->
             <TextView
