--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -51,8 +51,8 @@
                 android:id="@+id/editTextNoteTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="Note title"
@@ -66,26 +66,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/imageViewNote"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:src="@drawable/notelist_img"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:adjustViewBounds="true"
+                android:background="@drawable/custom_edit4"
+                android:maxHeight="260dp"
+                android:scaleType="fitCenter"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle"
+                tools:scaleType="centerCrop"
+                app:layout_constraintDimensionRatio="16:12"/>
+
+
             <!-- Content EditText -->
             <EditText
                 android:id="@+id/editTextNoteDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="Start typing your note..."
                 android:inputType="textMultiLine"
                 android:lineSpacingExtra="4dp"
                 android:minLines="10"
-                android:padding="8dp"
                 android:textSize="16sp"
+                android:padding="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />
-
+                app:layout_constraintTop_toBottomOf="@+id/imageViewNote" />
             <!-- Reminder Text -->
             <TextView
                 android:id="@+id/textViewReminderLabel"
