--- a/app/src/main/res/layout/fragment_note_finished.xml
+++ b/app/src/main/res/layout/fragment_note_finished.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.noteapp.ui.elements.fragments.NoteListFragment">
 
+    
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRecyclerView"
@@ -135,27 +137,56 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="52dp"/>
 
-    <TextView
-        android:id="@+id/textViewNotingToShow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_note_to_show"
-        android:textSize="@dimen/_20sdp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/notesRecyclerView"
-        app:layout_constraintEnd_toEndOf="@+id/notesRecyclerView"
-        app:layout_constraintStart_toStartOf="@+id/notesRecyclerView"
-        app:layout_constraintTop_toTopOf="@+id/notesRecyclerView" />
 
     <ProgressBar
         android:id="@+id/progressBarNotesLoading"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint="@color/orange"
+        android:indeterminateTint="@color/primary_base"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/empty_note"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="176dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomTabBar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/note_finished_empty"
+            android:layout_gravity="center"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_gravity="center"
+            android:text="No Finished Notes Yet"
+            android:textStyle="bold"
+            android:textSize="32sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_grey"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:text="Once you create a note and finish it, \nit will be appeared on this screen. \nSo, let's start your journey"/>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
