--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -8,20 +8,23 @@
     tools:context="com.example.noteapp.ui.elements.fragments.NoteListFragment">
 
 
+    <!-- Tab Bar Container -->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/categoryRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingTop="18dp"
+        android:paddingBottom="10dp"
+        tools:listitem="@layout/item_category"
         app:layout_constraintBottom_toTopOf="@id/bottomTabBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingTop="18dp"
-        android:paddingBottom="8dp"
-        android:clipToPadding="false"/>
+        app:layout_constraintVertical_bias="0.0" />
 
-
-    <!-- Tab Bar Container -->
     <LinearLayout
         android:id="@+id/bottomTabBar"
         android:layout_width="match_parent"
@@ -137,28 +140,67 @@
         android:layout_marginBottom="52dp"/>
 
 
-    <TextView
-        android:id="@+id/textViewNotingToShow"
-        android:layout_width="75dp"
-        android:layout_height="88dp"
-        android:text="@string/add_note_to_show"
-        android:textSize="@dimen/_20sdp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <TextView-->
+<!--        android:id="@+id/textViewNotingToShow"-->
+<!--        android:layout_width="75dp"-->
+<!--        android:layout_height="88dp"-->
+<!--        android:text="@string/add_note_to_show"-->
+<!--        android:textSize="@dimen/_20sdp"-->
+<!--        android:visibility="gone"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <ProgressBar
         android:id="@+id/progressBarNotesLoading"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint="@color/orange"
+        android:indeterminateTint="@color/primary_base"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/empty_note"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="176dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomTabBar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/notelist_img"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_gravity="center"
+            android:text="Start Your Journey"
+            android:textStyle="bold"
+            android:textSize="32sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textColor="@color/dark_grey"
+            android:text="Every big step start with small step. \nNotes your first ideo and start \nyour journey"/>
+    </LinearLayout>
+
 
 
 
