--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,16 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="182dp"
-    android:layout_height="252dp"
+    android:layout_width="192dp"
+    android:layout_height="304dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="12dp"
     app:cardCornerRadius="8dp"
     android:elevation="8dp"
     android:id="@+id/cardViewNote">
 
-    <LinearLayout
-        android:orientation="vertical"
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@drawable/custom_edit1"-->
+<!--        android:backgroundTint="#F7DEE3"-->
+<!--        android:orientation="vertical">-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewNoteTitle"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:ellipsize="marquee"-->
+<!--            android:marqueeRepeatLimit="marquee_forever"-->
+<!--            android:textStyle="bold"-->
+<!--            android:maxLines="2"-->
+<!--            android:text="@string/title"-->
+<!--            android:textSize="24sp" />-->
+
+<!--        <ImageView-->
+<!--            android:background="@drawable/custom_edit3"-->
+<!--            android:id="@+id/imageViewNote"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:maxHeight="96dp"-->
+<!--            android:scaleType="centerCrop"/>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textViewNoteDescription"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:ellipsize="end"-->
+<!--            android:maxLines="10"-->
+<!--            android:text="Note"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="16sp" />-->
+<!--    </LinearLayout>-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/custom_edit1"
@@ -18,74 +64,51 @@
 
         <TextView
             android:id="@+id/textViewNoteTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/title"
-            android:textSize="16sp"
-            android:singleLine="true"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:maxLines="2"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever" />
+            android:marqueeRepeatLimit="marquee_forever"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageViewNote"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:scaleType="centerCrop"
+            android:background="@drawable/custom_edit3"
+            app:layout_constraintTop_toBottomOf="@id/textViewNoteTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="16:12"
+            android:visibility="gone"/>
 
         <TextView
-
             android:id="@+id/textViewNoteDescription"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:maxLines="10"
-            android:ellipsize="end"
-            android:layout_weight="1"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:text="Note"
-            android:textSize="10sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:maxLines="10"
+            android:ellipsize="end"
+            app:layout_constraintTop_toBottomOf="@id/imageViewNote"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/textViewDateLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Created in"
-                android:textSize="10dp"
-                android:singleLine="true"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:scrollHorizontally="true"
-                />
-
-            <TextView
-                android:id="@+id/textViewNoteDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="xx/xx/xxxx"
-                android:textSize="10dp"
-                android:singleLine="true"
-                />
-
-            <TextView
-                android:id="@+id/textViewNoteTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="xx:xx"
-                android:textSize="10dp"
-                android:singleLine="true"
-                />
-        </LinearLayout>
-
-
-    </LinearLayout>
 </androidx.cardview.widget.CardView>
 
