--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.NoteApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">@color/black</item>
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.NoteApp" parent="Base.Theme.NoteApp" />
+
+    <style name="Theme.NoteApp" parent="Base.Theme.NoteApp">
+        <item name="android:statusBarColor">@color/black</item>
+    </style>
 </resources>
